@@ -563,6 +563,7 @@ All (GUI):
 - Add support for searching in wxWebView for MSW and GTK (Allonii).
 - Add generic wxFileSystem support to wxWebView with 
   wxWebViewFSHandler (Nick Matthews).
+- Add possibility to disable context menu in wxWebView.
 - Add possibility to hide and show again wxRibbonBar pages (wxBen).
 - Add wxRibbonBar pages highlighting (wxBen).
 - Add expand/collapse button to wxRibbonBar (rakeshthp).
